--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true 
-server.port=8087
+server.port=8082
 logging.level.org.springframework.security=DEBUG
+spring.servlet.multipart.max-file-size=10MB
+spring-servlet-multipart-max-request-size=-1
 
