--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,14 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true 
 server.port=8082
-logging.level.org.springframework.security=DEBUG
-spring.servlet.multipart.max-file-size=10MB
-spring-servlet-multipart-max-request-size=-1
+#logging.level.org.springframework.security=DEBUG
+spring.servlet.multipart.max-file-size=-1
+spring-servlet-multipart.max-request-size=-1
+ # File upload location (you can change this anytime)
+file.uploadDir=C:/Users/HP/OneDrive/Pictures/Screenshots
+# Serve uploaded files from that directory as static resources
+spring.web.resources.static-locations=classpath:/static/,file:${file.uploadDir}/
+
+
+
 
